# Schedule_agent

./: .env.example  .gitignore  FUTURE_IMPROVEMENTS.md  README.md  alembic.ini  pyproject.toml
.atl/: skill-registry.md
apps/admin-astro/: README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
apps/admin-astro/src/layouts/: Base.astro  (+2 more)
apps/api/src/: deps.py  main.py  schemas.py
openspec/: config.yaml
solo-tenant-bot/: AUDITORIA_TECNICA.txt  api.py  requirements.txt  sheets.py
tests/: __init__.py  conftest.py
tests/api/: conftest.py  test_audit_logs.py  test_barber_import.py  test_barber_link.py  test_barber_workspace.py  test_bot_config.py  test_burst_coalescing_e2e.py  test_data_settings.py  test_identity_settings.py  test_operational_settings.py  test_part3_routes.py  test_part4_routes.py  test_phase5_routes.py  test_routes.py  test_runtime_mode.py  test_schedule_import.py  test_services_import.py  test_sheets_reader.py  test_tenant_dashboard_routes.py  test_tenant_sheets.py  test_tenant_user_roles.py  test_workspace_profile.py
tests/application/: test_auth_service.py  test_booking_service.py  test_intake_booking_flow.py  test_intake_service.py  test_integration_wiring.py  test_kapso_config.py  test_manage_service.py  test_overview_service.py  test_provider_config_service.py  test_seams.py  test_superadmin_tenant_service.py
tests/auth/: test_primitives.py
tests/db/: test_schema_drift.py
tests/intake/: test_classify_intent.py
tests/repositories/: test_messaging_repos.py  test_repositories.py
tests/scheduling/: test_domain.py
(+82 files in other folders)
